added frozen apples

--- a/src/main/resources/assets/monkeysmod/lang/en_gb.json
+++ b/src/main/resources/assets/monkeysmod/lang/en_gb.json
@@ -9,5 +9,6 @@
     "item.monkeysmod.william_tell_apple": "william tell apple",
     "item.monkeysmod.banana_spawn_egg": "banana spawn egg",
     "item.monkeysmod.apple_spawn_egg": "apple spawn egg",
-    "itemgroup.monkeysmod_itemgroup": "monkeys mod"
+    "itemgroup.monkeysmod_itemgroup": "monkeys mod",
+    "item.monkeysmod.frozen_apple_item": "frozen apple"
 }
