--- a/src/main/resources/assets/monkeysmod/lang/en_us.json
+++ b/src/main/resources/assets/monkeysmod/lang/en_us.json
@@ -32,6 +32,7 @@
     "item.monkeysmod.cooked_pizza": "cooked pizza",
     "block.monkeysmod.pizza_block": "pizza",
     "item.monkeysmod.carrot_drill": "carrot drill",
+    "item.monkeysmod.golden_carrot_drill": "golden carrot drill",
     "entity.monkeysmod.mince_pie": "mince pie",
     "item.monkeysmod.mincepie_spawn_egg": "mincepie spawn egg",
     "item.monkeysmod.mince_pie_item": "mince pie",
