added a broken bin

--- a/src/main/resources/assets/monkeysmod/lang/en_gb.json
+++ b/src/main/resources/assets/monkeysmod/lang/en_gb.json
@@ -51,6 +51,7 @@
     "block.monkeysmod.pineapple_crop": "pineapple seed",
     "block.monkeysmod.mincepie_crop": "mincepie seed",
     "block.monkeysmod.coconut_crop": "coconut seed",
-    "block.monkeysmod.appleblock": "apple seed"
+    "block.monkeysmod.appleblock": "apple seed",
+    "block.monkeysmod.wheelie_bin": "wheelie bin"
     
 }
